<resources>
    <string name="app_name">PictureToCard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="power_up">POWER UP</string>
    <string name="abondon">Abandonner</string>
    <string name="imageCarte">Image carte</string>
    <string name="imageEffet">Image effet</string>
    <string name="imageColor">Image couleur</string>
    <string name="defaultScore">0</string>
    <string name="tableDescr">Table des types</string>
    <string name="helpButtonDescr">Description bouton Aide</string>
    <string name="powerUp">Up !</string>
    <string name="ok">Ok</string>
    <string name="endGameMessage">La partie est finie !</string>
    <string name="winMessage">Gagné !</string>
    <string name="loseMessage">Perdu…</string>
    <string name="tieMessage">Égalité</string>
    <string name="explicationTab">En ligne : attaque\nEn colonne : défense</string>
    <string name="tablesDesTypes">Tables des types</string>
    <string name="titreFragmentHelp">Aide</string>
    <string name="contenu_d_filable">Contenu défilable</string>
    <string name="presentationJeu">PictureToCard est un jeu de carte où vous jouez avec vos images favorites.\nVous pouvez prendre des photos ou importer des images dans la page photo.\nVous pourez ensuite les jouer dans un petit jeu de pierre-feuille-ciseau.</string>
    <string name="presentationCarte">Chaque carte dans votre collection générée via une image posséde une couleur et un effet.\nLa couleur défini quel est le résultat en jouant cette carte.\nL\'effet est un bonus qui peut être activé une fois par manche.\nL\'image au-dessus vous montre un exemple de carte, en haut ce trouve la couleur de la carte, et en bas son effet.</string>
    <string name="presentationInterface">Lorsque vous lancez une partie, vous vous retrouverez sur l\'écran ci-dessus.\nCette interface contient les informations suivantes :\n1 : la main de l\'adversaire\n2 : le score de la partie\n3 : un bouton vers la table des types\n4 : le résultat en jouant chaque carte\n5 : votre main\n6 : le bouton pour utiliser un power up</string>
    <string name="presentationTable">PictureToCard peut se jouer sans trop considérer la table des types grâce à l\'affichage des résultats.\nMais si vous souhaitez plus de contrôle sur le déroulé d\'une partie, vous pouvez vous intéresser à la table des types.\nCette table présente en 1 la carte joué par votre adversaire et en 2 la carte que vous jouez.</string>
    <string name="presentationsEffets">Chaque carte posséde un effet en plus de sa couleur.\nLes effets sont activables une fois par manche en utilisant le bouton power up.\nSi l\'effet est une couleur, utiliser le power up change la couleur par la couleur de l\'effet.\nMais vous pouvez aussi avec un effet + qui vous permet d\'ajouter 1 au résultat si vous jouez la carte.\nEnfin si votre carte posséde un effet double, cette carte reste dans votre main si vous utilisez le power up.</string>
    <string name="presentationRegle">L\'objectif de PictureToCard est de prendre l\'avantage sur votre adversaire en jouant vos cartes avec un élément ayant l\'ascendant par rapport aux cartes adverses.\nUn joueur gagne s\'il atteint 3 points ou s\'il a plus de points à la fin de la manche.\nLe jeu se joue en tour par tour, le premier joueur joue n\'importe quelle carte et gagne un point.\nLorsqu\'une carte est jouée, le joueur gagne ou perd des points en fonction de la couleur de la carte sur la pile et de la carte jouée. Une fois par manche, chaque joueur peut utiliser un power up pour utiliser l\'effet de la carte.</string>
</resources>
