<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/viewForAnim"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/pileDisplay"
        app:layout_constraintDimensionRatio="h,2:3"
        app:layout_constraintEnd_toEndOf="@+id/pileDisplay"
        app:layout_constraintStart_toStartOf="@+id/pileDisplay"
        app:layout_constraintTop_toTopOf="@+id/pileDisplay" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/power_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/scoreView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/defaultScore"
        app:layout_constraintBottom_toBottomOf="@+id/pileDisplay"
        app:layout_constraintEnd_toStartOf="@+id/pileDisplay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pileDisplay" />

    <TextView
        android:id="@+id/textScoreAnim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultScore"
        app:layout_constraintEnd_toEndOf="@+id/scoreView"
        app:layout_constraintBottom_toBottomOf="@+id/scoreView"
        app:layout_constraintStart_toStartOf="@+id/scoreView"
        app:layout_constraintTop_toTopOf="@+id/scoreView" />

    <ImageButton
        android:id="@+id/helpButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/table"
        android:contentDescription="@string/helpButtonDescr"
        app:layout_constraintBottom_toBottomOf="@+id/pileDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pileDisplay"
        app:layout_constraintTop_toTopOf="@+id/pileDisplay" />

    <View
        android:id="@+id/viewPlayerPlaying"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="-8dp"
        android:background="#D1CB9B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/res1" />

    <View
        android:id="@+id/viewOpoPlaying"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="-8dp"
        android:layout_marginBottom="-8dp"
        android:background="#D1CB9B"
        app:layout_constraintBottom_toBottomOf="@+id/carteOpo1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/carteOpo1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pileDisplay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="16dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toTopOf="@+id/viewPlayerPlaying"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewOpoPlaying">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/carte1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="16dp"
        android:background="#000000"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/carte2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/carte2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/carte1"
        app:layout_constraintEnd_toStartOf="@+id/carte3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/carte1"
        app:layout_constraintTop_toTopOf="@+id/carte1">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/carte3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/carte2"
        app:layout_constraintEnd_toStartOf="@+id/carte4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/carte2"
        app:layout_constraintTop_toTopOf="@+id/carte2">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/carte4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/carte3"
        app:layout_constraintEnd_toStartOf="@+id/carte5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/carte3"
        app:layout_constraintTop_toTopOf="@+id/carte3">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/carte5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/carte4"
        app:layout_constraintEnd_toStartOf="@+id/carte6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/carte4"
        app:layout_constraintTop_toTopOf="@+id/carte4">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/carte6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="8dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/carte5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/carte5"
        app:layout_constraintTop_toTopOf="@+id/carte5">

    </FrameLayout>

    <TextView
        android:id="@+id/res1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultScore"
        app:layout_constraintBottom_toBottomOf="@+id/res3"
        app:layout_constraintEnd_toEndOf="@+id/carte1"
        app:layout_constraintStart_toStartOf="@+id/carte1"
        app:layout_constraintTop_toTopOf="@+id/res3" />

    <TextView
        android:id="@+id/res2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultScore"
        app:layout_constraintBottom_toBottomOf="@+id/res3"
        app:layout_constraintEnd_toEndOf="@+id/carte2"
        app:layout_constraintStart_toStartOf="@+id/carte2"
        app:layout_constraintTop_toTopOf="@+id/res3" />

    <TextView
        android:id="@+id/res3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultScore"
        app:layout_constraintBottom_toBottomOf="@+id/res4"
        app:layout_constraintEnd_toEndOf="@+id/carte3"
        app:layout_constraintStart_toStartOf="@+id/carte3"
        app:layout_constraintTop_toTopOf="@+id/res4" />

    <TextView
        android:id="@+id/res4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultScore"
        app:layout_constraintBottom_toBottomOf="@+id/res5"
        app:layout_constraintEnd_toEndOf="@+id/carte4"
        app:layout_constraintStart_toStartOf="@+id/carte4"
        app:layout_constraintTop_toTopOf="@+id/res5" />

    <TextView
        android:id="@+id/res5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultScore"
        app:layout_constraintBottom_toBottomOf="@+id/res6"
        app:layout_constraintEnd_toEndOf="@+id/carte5"
        app:layout_constraintStart_toStartOf="@+id/carte5"
        app:layout_constraintTop_toTopOf="@+id/res6" />

    <TextView
        android:id="@+id/res6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/defaultScore"
        app:layout_constraintBottom_toTopOf="@+id/carte6"
        app:layout_constraintEnd_toEndOf="@+id/carte6"
        app:layout_constraintStart_toStartOf="@+id/carte6" />


    <FrameLayout
        android:id="@+id/carteOpo1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="2dp"
        android:background="#000000"
        app:layout_constraintEnd_toStartOf="@+id/carteOpo2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/carteOpo2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/carteOpo1"
        app:layout_constraintEnd_toStartOf="@+id/carteOpo3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/carteOpo1"
        app:layout_constraintTop_toTopOf="@+id/carteOpo1">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/carteOpo3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/carteOpo2"
        app:layout_constraintEnd_toStartOf="@+id/carteOpo4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/carteOpo2"
        app:layout_constraintTop_toTopOf="@+id/carteOpo2">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/carteOpo4"
        android:layout_width="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:background="#000000"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/carteOpo3"
        app:layout_constraintEnd_toStartOf="@+id/carteOpo5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/carteOpo3"
        app:layout_constraintTop_toTopOf="@+id/carteOpo3">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/carteOpo5"
        android:layout_width="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:background="#000000"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/carteOpo4"
        app:layout_constraintEnd_toStartOf="@+id/carteOpo6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/carteOpo4"
        app:layout_constraintTop_toTopOf="@+id/carteOpo4">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/carteOpo6"
        android:layout_width="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="8dp"
        android:background="#000000"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/carteOpo5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/carteOpo5"
        app:layout_constraintTop_toTopOf="@+id/carteOpo5">

    </FrameLayout>

    <TextView
        android:id="@+id/textUp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powerUp"
        app:layout_constraintBottom_toTopOf="@+id/scoreView"
        app:layout_constraintEnd_toEndOf="@+id/scoreView"
        app:layout_constraintStart_toStartOf="@+id/scoreView"
        app:layout_constraintTop_toBottomOf="@+id/viewOpoPlaying" />

    <TextView
        android:id="@+id/textUp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powerUp"
        app:layout_constraintBottom_toTopOf="@+id/viewPlayerPlaying"
        app:layout_constraintEnd_toEndOf="@+id/scoreView"
        app:layout_constraintStart_toStartOf="@+id/scoreView"
        app:layout_constraintTop_toBottomOf="@+id/scoreView" />

    <TextView
        android:id="@+id/textUp3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powerUp"
        app:layout_constraintBottom_toTopOf="@+id/scoreView"
        app:layout_constraintEnd_toEndOf="@+id/helpButton"
        app:layout_constraintStart_toStartOf="@+id/helpButton"
        app:layout_constraintTop_toBottomOf="@+id/viewOpoPlaying" />

    <TextView
        android:id="@+id/textUp4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powerUp"
        app:layout_constraintBottom_toTopOf="@+id/viewPlayerPlaying"
        app:layout_constraintEnd_toEndOf="@+id/helpButton"
        app:layout_constraintStart_toStartOf="@+id/helpButton"
        app:layout_constraintTop_toBottomOf="@+id/scoreView" />

</androidx.constraintlayout.widget.ConstraintLayout>